Implemented delete survey and updateSurvey endpoints. Updated openapi.yaml. Fixed some minor issues
